fixed images in posts so that they are no longer cropped badly on mobile

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 801px)  {
 figure > img {
     display: block;
 }
@@ -40,3 +41,52 @@ figcaption {
     vertical-align: middle;
     font-size: $caption-font-size;
 }
+}
+
+
+
+
+@media only screen and (max-width: 800px)  {
+     figure > img {
+         display: block;
+     }
+     
+     figcaption {
+         font-size: $small-font-size;
+     }
+     
+     
+     .blankbox {
+         background: $theme-color;
+     }
+     .img_row {
+         height: $img-height;
+         width: 100%;
+     //     overflow: hidden;
+     //     box-sizing:border-box;
+     }
+     .col {
+         width: 100%;
+         height: 100%;
+         float: left;
+         object-fit: cover;
+         box-sizing:border-box;
+         padding: $img-spacing;
+     }
+     .one {
+         width:100%;
+     }
+     .two {
+         width: 100%;
+     }
+     .three {
+         width: 100%;
+     }
+     .caption {
+         height: 100%;
+         color: $caption-color;
+         text-align: center;
+         vertical-align: middle;
+         font-size: $caption-font-size;
+     }
+     }
